<resources>

    <string name="app_name">NeverAlone</string>

    <string name="backgroundFirstPage">NABackground</string>
    <string name="login">Iniciar Sesión</string>
    <string name="forget_password">¿Olvidaste tu contraseña?</string>
    <string name="sign_up_google">Continúa con Google</string>
    <string name="login_continue">Continuar</string>
    <string name="register_link">Regístrate</string>
    <string name="o">O</string>

    <string name="join_neveralone">ÚNETE A NEVERALONE</string>
    <string name="user_name">Nombre</string>
    <string name="user_surname">Apellido</string>
    <string name="user_email">Correo Electrónico</string>
    <string name="user_password">Contraseña</string>
    <string name="user_password2">Repetir contraseña</string>
    <string name="choose_user_type">Elige tipo de usuario</string>
    <string name="volunteer">Voluntario</string>
    <string name="beneficiary">Beneficiario</string>
    <string name="register_continue">Continuar</string>


    <string name="user_postalcode">Código Postal</string>
    <string name="user_flatnum">Piso</string>
    <string name="user_street">Calle</string>
    <string name="user_dni">DNI</string>
    <string name="user_is_tutor">FALSE</string>
    <string name="c_digo_postal_textView">Código postal</string>
    <string name="hint_codigopostal_EditText">Código postal</string>
    <string name="hint_dni">DNI</string>
    <string name="label_quieres_ser_tutor">Quieres ser tutor?</string>
    <string name="radiobutton_noTutor">No</string>
    <string name="radiobutton_siTutor">Si</string>
    <string name="registrar_text_button">Registrar</string>
    <string name="atras_button">Atras</string>
    <string name="Logo">Logo</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_view_profile">Mi perfil</string>
    <string name="label_categoria_petición">Seleccione la categoria de su petición:</string>
    <string name="fecha_para_la_peticion">Seleccione una fecha:</string>
    <string name="input_fecha_peticion">dd/mm/yyyy</string>
    <string name="input_hora_peticion">hh:mm</string>
    <string name="Mis_peticiones_title">Mis Peticiones</string>
    <string name="TituloPeticion">Comprar Mercadona</string>
    <string name="usuarioPeticion">Setch</string>

    <string name="usuarioContacto">Setch</string>

    <string name="estadoPeticion">Pendiente</string>
    <string name="fechaDetailViewContribution">Fecha:</string>
    <string name="horadetailViewContribucion">"Hora: "</string>
    <string name="descriptionDetailViewpeticion">Descripción</string>
    <string name="title_activity_maps">Map</string>
    <string name="enviar_mensaje">Enviar Mensaje</string>

    <string name="perfil_name">Mi perfil</string>
    <string name="title_activity_first_home">FirstHomeActivity</string>
    <string name="update_profile">Actualizar Perfil</string>
    <string name="logout">Cerrar Sesión</string>
    <string name="my_profile">Perfil</string>
    <string name="mapa_de_peticiones_tab">Mapa de peticiones</string>
    <string name="lista_de_peticiones_tab">Lista de peticiones</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="avg_punctuation">Puntuación Media</string>
    <string name="menu_autotest">AUTO-TEST</string>
    <string name="crear_peticion_button">Crear Petición</string>
    <string name="contacts">Contactos</string>
    <string name="menu_listadecontactos">Contactos</string>

    <string name="contrasena">Recuperar Contraseña</string>
    <string name="contrasena_button">Aceptar</string>
    <string name="title_activity_scrolling_after_google_sign_in">ScrollingActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>


</resources>