<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_24"
            android:title="@string/menu_home" />
    </group>
    <group android:checkableBehavior="single">
        <item android:title="@string/my_profile">
            <menu>
                <item
                    android:id="@+id/nav_myprofile"
                    android:icon="@drawable/ic_account_circle_24"
                    android:title="@string/menu_view_profile" />
                <item
                    android:id="@+id/nav_autotest"
                    android:icon="@android:drawable/ic_menu_edit"
                    android:title="@string/menu_autotest" />
                <item
                    android:id="@+id/nav_logout"
                    android:icon="@drawable/ic_baseline_power_settings_new_24"
                    android:title="@string/logout" />

            </menu>


        </item>

    </group>
</menu>