<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="25sp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Activity.RegisterVolunteerActivity">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="@dimen/cardview_default_radius"
        android:layout_marginBottom="55dp"
        android:contentDescription="@string/Logo"
        android:src="@drawable/logo_sin_fondo">

    </ImageView>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:counterEnabled="true"
        app:counterMaxLength="5"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/user_postalcode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_codigopostal_EditText"
            android:inputType="number"/>

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:counterEnabled="true"
        app:counterMaxLength="9"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/idDNI"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_dni" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/idRegistroRegistrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/registrar_text_button" />

    <Button
        android:id="@+id/idVolverAtras"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/atras_button"/>

</LinearLayout>
