<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation">

    <fragment
        android:id="@+id/nav_homev"
        android:name="com.example.neveralone.ui.home.volunteer.HomeVolunteerFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_homevolunteer" />

    <fragment
        android:id="@+id/nav_myprofile"
        android:name="com.example.neveralone.ui.profile.ProfileFragment"
        android:label="@string/menu_view_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_autotest"
        android:name="com.example.neveralone.ui.autotest.AutotestFragment"
        android:label="@string/menu_autotest"
        tools:layout="@layout/fragment_autotest" />

    <fragment
        android:id="@+id/nav_homeb"
        android:name="com.example.neveralone.ui.home.benefactor.HomeBenefactorFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_homebenefactor" />
</navigation>