<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="30dp"
    tools:context=".Activity.RecoverPasswordActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorCian"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/contrasena"
            android:textColor="@color/colorBlack"
            android:textSize="30dp"
            android:textStyle="bold" />
    </FrameLayout>

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/user_email"
        android:importantForAutofill="yes"
        android:inputType="textEmailAddress" />

    <Button
        android:id="@+id/recuperar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="resetPassword"
        android:text="@string/contrasena_button" />


</LinearLayout>