<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.LoginActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="324dp"
        android:contentDescription="@string/backgroundFirstPage"
        android:focusable="auto"
        android:src="@drawable/watercolour"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.63" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="325dp"
        android:layout_height="74dp"
        android:autoSizeMaxTextSize="70sp"
        android:autoSizeMinTextSize="55sp"
        android:autoSizeTextType="uniform"
        android:fontFamily="@font/bree_serif"
        android:gravity="center"
        android:text="@string/app_name"
        android:textAllCaps="false"
        android:textColor="#0A5345"
        android:textStyle="bold"
        android:typeface="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.413" tools:targetApi="o"/>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="291dp"
        android:layout_height="221dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.204">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_email" />

        <EditText
            android:id="@+id/emailAddressLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/user_email"
            android:inputType="textEmailAddress"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imageView"
            app:layout_constraintVertical_bias="0.501" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="16dp">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" />
        </TableRow>

        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_password" />

        <EditText
            android:id="@+id/editTextTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/user_password"
            android:inputType="textPassword" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="16dp">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical" />
        </TableRow>

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="login"
            android:text="@string/login_continue"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.513"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passLogin"
            app:layout_constraintVertical_bias="0.082" />

    </LinearLayout>

    <Button
        android:id="@+id/button2"
        android:layout_width="271dp"
        android:layout_height="47dp"
        android:layout_marginBottom="64dp"
        android:onClick="registerWithGoogle"
        android:text="@string/sign_up_google"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.45"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="21dp"
        android:layout_height="29dp"
        android:layout_marginTop="12dp"
        android:autoSizeMaxTextSize="18sp"
        android:autoSizeMinTextSize="16sp"
        android:autoSizeTextType="uniform"
        android:gravity="center"
        android:text="@string/o"
        app:layout_constraintEnd_toStartOf="@+id/divider2"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toEndOf="@+id/divider3"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" tools:targetApi="o"/>

    <View
        android:id="@+id/divider3"
        android:layout_width="190dp"
        android:maxWidth="190dp"
        android:minWidth="180dp"
        android:layout_height="1dp"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="191dp"
        android:layout_marginRight="191dp"
        android:layout_marginBottom="16dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.555" />

    <View
        android:id="@+id/divider2"
        android:layout_width="190dp"
        android:maxWidth="190dp"
        android:minWidth="180dp"
        android:layout_height="1dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="16dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/linearLayout"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <TextView
        android:id="@+id/forgetPassLink"
        android:layout_width="188dp"
        android:layout_height="20dp"
        android:layout_marginTop="21dp"
        android:layout_marginBottom="28dp"
        android:autoSizeMaxTextSize="22dp"
        android:autoSizeMinTextSize="16dp"
        android:autoSizeTextType="uniform"
        android:gravity="center"
        android:text="@string/forget_password"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.088"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2"
        app:layout_constraintVertical_bias="1.0" tools:targetApi="o"/>

    <TextView
        android:id="@+id/registerLink"
        android:layout_width="95dp"
        android:layout_height="22dp"
        android:layout_marginTop="21dp"
        android:layout_marginBottom="28dp"
        android:autoSizeMaxTextSize="22dp"
        android:autoSizeMinTextSize="16dp"
        android:autoSizeTextType="uniform"
        android:gravity="center"
        android:clickable="true"
        android:focusable="true"
        android:onClick="register"
        android:text="@string/register_link"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.903"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2"
        app:layout_constraintVertical_bias="0.9" tools:targetApi="o"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="185dp"
        android:layout_height="52dp"
        android:layout_marginBottom="5dp"
        android:gravity="center"
        android:text="@string/login"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

</androidx.constraintlayout.widget.ConstraintLayout>